<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_baseline_record_voice_over_24"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_baseline_album_24"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_baseline_headset_24"
        android:title="@string/title_collectors" />

</menu>