<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.artists.ArtistsFragment">

    <TextView
        android:id="@+id/textViewAlbumsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_albums"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldAlbums"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@id/textViewAlbumsTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlbumsTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAlbumsFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_new_album_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:contentPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldAlbums">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_new_album_card_legend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_album_legend"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="220dp" />

            <Button
                android:id="@+id/add_new_album_card_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_album"
                android:textAlignment="viewEnd"
                android:textColor="@color/secondaryColor"
                android:background="@android:color/transparent"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albums_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_album_card"
        tools:listitem="@layout/album_item" />

</androidx.constraintlayout.widget.ConstraintLayout>